src/index.css
/* ... */
.owl-theme .owl-nav [class*=owl-] {
    color: #FFF;
    font-size: 12px;
    margin: 5px;
    padding: 4px 7px;
    background: #BD945A;
    display: inline-block;
    cursor: pointer;
    border-radius: 3px;
}
.owl-theme .owl-nav [class*=owl-] {
    background-color: transparent;
    border: 1px solid rgba(255, 255, 255, 0.6);
    width: 30px;
    height: 30px;
    line-height: 25px;
    border-radius: 50%;
    color: rgba(255, 255, 255, 0.6);
}
.owl-theme .owl-nav [class*=owl-]:hover {
    background-color: transparent;
    border: 1px solid #BD945A;
    color: #BD945A;
}


/* ===== Sidebar style ===== */
#oliven-page {
  width: 100%;
  overflow: hidden;
  position: relative;
}
#oliven-aside {
  padding: 60px 30px;
  width: 22%;
  position: fixed;
  bottom: 0;
  top: 0;
  left: 0;
  overflow-y: scroll;
  z-index: 1001;
  background: #F6F1F0;
  -webkit-transition: 0.5s;
  -o-transition: 0.5s;
  transition: 0.5s;
  scrollbar-width: none;
}
@media screen and (max-width: 1200px) {
  #oliven-aside {
      width: 30%;
  }
}
@media screen and (max-width: 768px) {
  #oliven-aside {
      width: 270px;
      -moz-transform: translateX(-270px);
      -webkit-transform: translateX(-270px);
      -ms-transform: translateX(-270px);
      -o-transform: translateX(-270px);
      transform: translateX(-270px);
      padding-top: 30px;
  }
}
#oliven-aside .oliven-logo {
  text-align: center;
  font-family: 'Cormorant Garamond', serif;
  font-size: 40px;
  font-weight: 600;
  text-transform: uppercase;
  margin-bottom: 10px;
  display: block;
  width: 100%;
  position: relative;
  color: #000;
  line-height: 1.2em;
  letter-spacing: 0px;
}
#oliven-aside .oliven-logo span {
      font-family: 'Alex Brush', cursive;
  font-weight: 400;
  text-transform: none;
  text-align: center;
  font-size: 24px;
  color: #fff;
}
#oliven-aside .oliven-logo h6 {
  font-family: 'Nunito Sans', sans-serif;
  font-weight: 400;
  text-transform: none;
  text-align: center;
  font-size: 10px;
  letter-spacing: 5px;
  color: #000;
  margin-bottom: 5px;
}
#oliven-aside .oliven-logo img {
  width: 90px;
  margin-bottom: 0px;
}
@media screen and (max-width: 768px) {
  #oliven-aside .oliven-logo {
      margin-bottom: 60px;
  }
}
#oliven-aside .oliven-logo a {
  display: inline-block;
}
#oliven-aside .oliven-logo a span {
  display: block;
  font-size: 36px;
  color: #BD945A;
  font-family: 'Alex Brush', cursive;
  font-weight: 400;
  display: block;
  margin-top: 0px;
  text-align: center;
  line-height: 1.5em;
}
#oliven-aside .oliven-logo a i {
  color: #fff;
  font-size: 16px;
  vertical-align: super;
}
#oliven-aside .oliven-main-menu ul {
  text-align: center;
  margin: 0;
  padding: 0;
}
@media screen and (max-width: 768px) {
  #oliven-aside .oliven-main-menu ul {
      margin: 0 0 30px 0;
  }
}
#oliven-aside .oliven-main-menu ul li {
  margin: 3px 0 3px 0;
  padding: 0 0 3px 0;
  list-style: none;
}
#oliven-aside .oliven-main-menu ul li a {
  color: #000;
  text-decoration: none;
  position: relative;
  padding: 0;
  font-family: 'Cormorant Garamond', serif;
  font-weight: 400;
  font-size: 17px;
  line-height: 1.5em;
  letter-spacing: 0.5px;
  -webkit-transition: 0.3s;
  -o-transition: 0.3s;
  transition: 0.3s;
  border-bottom: 1px solid transparent;
}
#oliven-aside .oliven-main-menu ul li a:hover {
  border-bottom: 1px solid #BD945A;
  -webkit-transition: all .5s ease-in-out;
  transition: all .5s ease-in-out
}
#oliven-aside .oliven-main-menu ul li.oliven-active a {
  color: #BD945A;
}
#oliven-aside .oliven-main-menu ul li.oliven-active a:after {
  visibility: visible;
  -webkit-transform: scaleX(1);
  -moz-transform: scaleX(1);
  -ms-transform: scaleX(1);
  -o-transform: scaleX(1);
  transform: scaleX(1);
}
#oliven-aside .oliven-main-menu ul li a span:hover {
  color: #000;
}
#oliven-aside .footer1 {
  position: absolute;
  bottom: 30px;
  right: 0;
  left: 0;
  text-align: center;
}
#oliven-aside .footer1 p {
  font-size: 12px;
  color: #888;
  letter-spacing: 0.5px;
}
#oliven-aside .footer1 img {
  width: 75px;
}
#oliven-aside .footer1 a {
  color: #BD945A;
}
#oliven-aside .separator {
  width: 60px;
  position: relative;
  display: inline-block;
  vertical-align: middle;
   border-bottom: 1px solid rgba(189, 148, 90,0.4);
  margin: 5px auto;
}
@media screen and (max-width: 768px) {
  #oliven-aside .footer1 {
      position: relative;
      padding-top: 60px;
  }
}


/* ===== Main style ===== */
#oliven-main {
  width: 78%;
  float: right;
  -webkit-transition: 0.5s;
  -o-transition: 0.5s;
  transition: 0.5s;
}
@media screen and (max-width: 1200px) {
  #oliven-main {
      width: 70%;
  }
}
@media screen and (max-width: 768px) {
  #oliven-main {
      width: 100%;
  }
}


/* ===== Navigation styles ===== */
.oliven-nav-toggle {
  cursor: pointer;
  text-decoration: none;
}
.oliven-nav-toggle.active i::before,
.oliven-nav-toggle.active i::after {
  background: #fff;
}
.oliven-nav-toggle.dark.active i::before,
.oliven-nav-toggle.dark.active i::after {
  background: #000;
}
.oliven-nav-toggle:hover,
.oliven-nav-toggle:focus,
.oliven-nav-toggle:active {
  outline: none;
  border-bottom: none !important;
}
.oliven-nav-toggle i {
  position: relative;
  display: -moz-inline-stack;
  display: inline-block;
  zoom: 1;
  width: 19px;
  height: 1px;
  color: #fff;
  font: bold 14px/.4 Helvetica;
  text-transform: uppercase;
  text-indent: -55px;
  background: #fff;
  -webkit-transition: all .2s ease-out;
  -o-transition: all .2s ease-out;
  transition: all .2s ease-out;
  top: -4px;
}
.oliven-nav-toggle i::before,
.oliven-nav-toggle i::after {
  content: '';
  width: 20px;
  height: 1px;
  background: #fff;
  position: absolute;
  left: 0;
  -webkit-transition: 0.2s;
  -o-transition: 0.2s;
  transition: 0.2s;
}
.oliven-nav-toggle.dark i {
  position: relative;
  color: #000;
  background: #000;
  -webkit-transition: all .2s ease-out;
  -o-transition: all .2s ease-out;
  transition: all .2s ease-out;
}
/* ... */

